Fixed Layout Issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -640,6 +640,10 @@ canvas {
   padding: 5px;
   display: block; }
 
+@media only screen and (max-width: 1200px) {
+  .screen-footer-btncontainer-text {
+    display: none; } }
+
 #landing-bg {
   background-color: #FFFFF4; }
 
