--- a/sass/components/_theme-toggle.scss
+++ b/sass/components/_theme-toggle.scss
@@ -11,7 +11,7 @@
     height: 100px;
     margin-right: $small-side-separator;
     position: relative;
-    display: block;
+    display: block
 }
 
 .theme-toggle { 
